src/CrestApps.Docs/versioned_docs/version-2.1/changelog/2.0.0.md
---
sidebar_label: 2.0.0 Release Notes
sidebar_position: 7
title: "Version 2.0.0 Release Notes"
description: Release notes for CrestApps.OrchardCore 2.0.0, including the platform upgrade, major new features, and upgrade guidance.
---

# Version 2.0.0 Release Notes

**Release date:** August 4, 2026

Version `2.0.0` is a complete rewrite of the `1.x` line for **.NET 10** and **Orchard Core 3.0.x**. It introduces a much broader set of modules for AI, content operations, omnichannel communication, phone-number intelligence, telephony, reporting, recipes, and administration.

Version 2.0 also launches the official CrestApps.OrchardCore documentation site at [orchardcore.crestapps.com](https://orchardcore.crestapps.com). The site now hosts the latest docs plus versioned documentation for the 2.0 and 1.2 lines.

This page highlights the final `2.0.0` capabilities and the upgrade items that matter when moving from `1.x`.

## At a glance

| Area | 2.0.0 focus |
| --- | --- |
| Platform | .NET 10 and Orchard Core `>= 3.0.0` and `< 3.1.0`. |
| AI | Provider connections, deployments, profiles, prompt templates, chat, agents, tools, retrieval, memory, documents, Copilot, Claude, A2A, and MCP. |
| Content operations | Content Access Control, Content Transfer, Phone Field, richer recipe schemas, and workflow activity schemas. |
| Omnichannel | Contacts, subject flows, activity management, SMS, Event Grid, DNC integration, and contact import/export. |
| Phone intelligence | Phone-number verification, provider integrations, retry queue, reporting, and contact verification workflows. |
| Telephony | Provider-agnostic soft phone, call controls, recent calls, click-to-dial, and DialPad integration. |
| Reporting | Shared reports area, reusable date-range picker, CSV exports, and optional Excel exports. |

## Before you upgrade

Back up every tenant database before starting an upgraded application on `2.0.0`. Then review application projects, package references, enabled features, AI configuration, recipes, deployment plans, and any custom modules.

The most important platform changes are:

| Area | 1.x | 2.0.0 |
| --- | --- | --- |
| .NET | .NET 8 / .NET 9 | .NET 10 |
| Orchard Core | Orchard Core 2.x | Orchard Core `>= 3.0.0` and `< 3.1.0` |
| Target framework | `net8.0` / `net9.0` | `net10.0` |
| AI setup | Provider-specific selectors and settings | Provider connections, deployments, profiles, and defaults |
| Retrieval | Provider-specific knowledge flows | Data sources, documents, and memory |
| Documentation | Module README files | Official Docusaurus site with versioned docs |

## Upgrade notes

### Platform requirements

Applications using CrestApps.OrchardCore `2.0.0` should run on .NET 10 and Orchard Core `>= 3.0.0` and `< 3.1.0`. Update the application target framework, package references, and package feeds before starting upgraded tenants.

### AI configuration review

Because `2.0.0` is a rewrite, review existing AI configuration instead of assuming every `1.x` setting maps directly. The `2.0.0` AI experience is organized around reusable provider connections, deployments, profiles, templates, and defaults rather than the older provider-specific setup.

The preferred AI configuration path is now `OrchardCore:CrestApps:AI`. Older `CrestApps_AI` configuration remains transitional, but new configuration should use the Orchard Core path.

### Retrieval review

If a `1.x` tenant used Azure OpenAI "with your data" style setup, review the new provider-agnostic retrieval modules. In `2.0.0`, knowledge is modeled through AI Data Sources, AI Documents, and AI Memory so the same concepts can work across supported providers.

### Tenant validation

After migrations run, validate the features that are enabled for each tenant. For AI tenants, confirm that chat, retrieval, tools, profiles, and defaults work as expected. For content and communication tenants, validate imports, exports, contact records, reports, phone-number verification, and any newly enabled workflows.

## New and expanded features

### Artificial Intelligence Suite

The AI Suite is now a full platform for building AI-powered Orchard Core experiences. Administrators can configure provider connections, create deployments for different AI purposes, define profiles and profile templates, manage prompt templates, and control which tools and knowledge sources are available to each experience.

The suite includes:

- **AI provider connections and deployments** for organizing model providers, credentials, and model choices.
- **AI Profiles** for reusable chat and assistant behavior.
- **AI Profile Templates** and **Prompt Templates** for repeatable tenant configuration.
- **AI Agents** for orchestrated workflows that can combine prompts, tools, retrieval, and external integrations.
- **AI Tool Management** and **AI Tool Instances** for enabling built-in tools or administrator-configured HTTP API tools.
- **Response Handlers** for extending how chat conversations are handled after a user message or at the end of a session.

See [Artificial Intelligence Suite](../ai/index.md), [AI Agent](../ai/agent.md), [AI Tool Management](../ai/tools.md), [AI Tool Instances](../ai/tool-instances.md), [AI Prompt Templates](../ai/prompt-templates.md), [AI Profile Templates](../ai/profile-templates.md), and [Response Handlers](../ai/response-handlers.md).

### AI Chat, Chat Interactions, Copilot, and Claude

The chat modules provide multiple ways to add AI conversations to an Orchard Core site.

- **AI Chat** provides reusable profile-based chat experiences for admin and frontend scenarios.
- **AI Chat Interactions** supports ad-hoc AI interactions without requiring a dedicated profile for every scenario.
- **AI Chat Analytics** helps review chat usage and conversation activity.
- **Copilot integration** brings a GitHub Copilot-style chat experience into Orchard Core.
- **Claude integration** adds Claude as a first-class provider option.

Chat experiences support document citations, anti-spam controls, configurable capabilities, and deployment-aware behavior so administrators can decide which models, tools, and knowledge sources are available for each chat scenario.

See [AI Chat](../ai/chat.md), [AI Chat Analytics](../ai/chat-analytics.md), [AI Chat Interactions](../ai/chat-interactions.md), [AI Chat Copilot Integration](../ai/copilot.md), and [Claude](../ai/claude.md).

### AI retrieval, documents, and memory

`2.0.0` introduces a provider-agnostic retrieval model.

- **AI Data Sources** connect tenant content or external sources to AI knowledge indexes.
- **AI Documents** support upload, parsing, indexing, and retrieval for document-based chat and assistant scenarios.
- **AI Memory** gives assistants a persistent memory capability that can be backed by supported indexing providers.

Built-in integrations include Azure AI Search, Elasticsearch, PostgreSQL data sources, PDF documents, OpenXML documents, and Azure Blob Storage for document storage.

See [AI Data Sources](../ai/data-sources/index.md), [AI Documents](../ai/documents/index.md), [PDF support](../ai/documents/pdf.md), [OpenXML support](../ai/documents/openxml.md), [Azure Blob Storage](../ai/documents/azure-blob-storage.md), and [AI Memory](../ai/memory.md).

### A2A and MCP

The release adds protocol support for connecting Orchard Core AI experiences with other agents and tools.

- **A2A** lets Orchard-hosted AI solutions participate in agent-to-agent workflows.
- **MCP Server** lets Orchard Core expose resources to MCP clients.
- **MCP Client** lets Orchard Core consume external MCP servers.
- FTP and SFTP MCP resource modules add file-resource options.

The SFTP MCP dependency chain now pins `SSH.NET` to the patched `2026.0.0` release for GHSA-q939-rpr3-3284.

See [A2A](../ai/a2a/index.md), [Model Context Protocol](../ai/mcp/index.md), [MCP Server](../ai/mcp/server.md), [MCP Client Integration](../ai/mcp/client.md), [FTP MCP resources](../ai/mcp/ftp.md), and [SFTP MCP resources](../ai/mcp/sftp.md).

### Content Access Control and Phone Field

**Content Access Control** lets administrators restrict content items by role. A content type can require specific roles before a user can access items of that type.

**Phone Field** stores phone numbers in a normalized format with country-aware editing and validation. It is used by other modules such as Omnichannel and phone-number verification, and it is also available for custom content types.

See [Content Access Control](../modules/content-access-control.md) and [Content Fields](../modules/content-fields.md).

### Content Transfer

**Content Transfer** provides bulk import and export for Orchard Core content.

The base feature supports CSV. The optional OpenXml feature adds Excel `.xlsx` support. Administrators can download templates, import rows in the selected format, publish imported content when desired, monitor queued imports, download failed rows, and export content for the selected content type.

Content Transfer also supports large import files through chunked uploads, so import limits can be configured without weakening the global media library limits.

See [Content Transfer](../modules/content-transfer.md).

### DNC Registry

The **DNC Registry** modules help sites check phone numbers against do-not-call sources.

Administrators can configure provider settings, protect provider API keys, and use the **Local Do Not Call Registry** to upload country-specific CSV lists. Local uploads are processed in the background and include progress and validation feedback.

The local registry repair migration now resolves physical index table names with the tenant table prefix before checking schema metadata. It also does not rethrow if a table is already present, so a duplicate-object repair path cannot cancel the shared migration session for other features.

See [DNC Registry](../modules/dnc-registry.md).

### Omnichannel

The new Omnichannel platform supports customer communication workflows inside Orchard Core.

It includes:

- Contact records with phone numbers, time zones, contact methods, and communication preferences.
- Subject flows for deciding what should happen when an activity is completed.
- Activity management for manual and automated work.
- Campaigns, campaign groups, dispositions, channel endpoints, and subject actions.
- SMS support for automated or agent-driven messaging.
- Event Grid integration for webhook-based communication scenarios.
- Contact import/export support through Content Transfer.
- Reporting support when the Reports module is enabled.

Subject behavior is configured from the subject content type, so administrators can manage direction, channel, activity behavior, AI options, and disposition requirements from the content definition experience.

The activity batch index migration now applies the `Source` and `CreatedUtc` column additions as isolated, idempotent schema changes. This prevents a sibling migration failure from rolling back those columns on databases with transactional DDL and fixes activity batch screens that failed with `Invalid column name 'CreatedUtc'`.

The contact index repair migration now runs each idempotent table, column, and index schema change in its own isolated transaction. This prevents an expected "already exists" DDL failure from poisoning the shared migration transaction, which could otherwise leave `OmnichannelContactsMigrations` stuck on PostgreSQL and other transactional DDL providers.

See [Omnichannel Communications](../omnichannel/index.md), [Omnichannel Management](../omnichannel/management.md), [SMS](../omnichannel/sms.md), and [Event Grid](../omnichannel/event-grid.md).

### Phone Number Verifications

**Phone Number Verifications** provides a provider-agnostic way to verify phone numbers and track verification results.

The feature can verify omnichannel contact phone numbers, store provider responses, retry failed checks, surface records that need attention, and provide an administrative queue for monitoring and retrying verification work.

Built-in providers include:

| Provider | Capability |
| --- | --- |
| AbstractAPI | Phone validation through AbstractAPI. |
| Twilio | Phone lookup through Twilio Lookup. |
| Veriphone | Phone verification through Veriphone. |

See [Phone Number Verifications](../modules/phone-number-verifications.md), [AbstractAPI](../modules/phone-number-verifications-abstractapi.md), [Twilio](../modules/phone-number-verifications-twilio.md), and [Veriphone](../modules/phone-number-verifications-veriphone.md).

### Reports and Resources

The new **Reports** module provides a shared admin reports area with reusable filters, metric cards, tables, charts, permissions, and exports. CSV export is included in the base feature, and Excel export is available through the optional OpenXml feature.

The **Resources** module provides shared UI resources used across modules. The new reusable **DateRangePicker** gives reports and activity screens a consistent date-range filter with presets and custom ranges.

See [Reports](../modules/reports.md) and [Resources](../modules/resources.md#date-range-picker).

### Recipes and workflow activity schemas

The Recipes module now provides richer schema support for authoring and validating recipes. Schemas cover more Orchard Core and CrestApps concepts, including content definitions, content items, roles, settings, AI profiles, data sources, MCP resources, A2A connections, and workflows.

Several recipe steps now compose their schema from extensible, per-provider contributions, so a custom module can describe its own shapes:

- The `Layers` step describes every rule condition and operator. See [Rule Condition Schemas](../modules/rule-condition-schemas.md).
- The `Sitemaps` step describes every sitemap source. See [Sitemap Source Schemas](../modules/sitemap-source-schemas.md).
- The `deployment` step describes every deployment step payload. See [Deployment Step Schemas](../modules/deployment-step-schemas.md).
- The `AdminMenu` step describes every admin menu node. See [Admin Menu Node Schemas](../modules/admin-menu-node-schemas.md).
- The `Queries` step describes every query source. See [Query Source Schemas](../modules/query-source-schemas.md).
- The `UrlRewriting` step describes every rewrite rule source. See [URL Rewrite Rule Schemas](../modules/url-rewrite-rule-schemas.md).
- The `Placements` step describes every placement node filter. See [Placement Node Filter Schemas](../modules/placement-node-filter-schemas.md).

Wherever a property accepts a known tenant value, the schema now lists live example values drawn from the current tenant, such as content types, content parts, cultures, roles, and index profile names. These examples are non-restrictive suggestions, so custom values stay valid.

Workflow activity schemas help describe workflow events and tasks more clearly, making recipe authoring easier for automation and AI-assisted scenarios.

See [Recipes](../modules/recipes.md) and [Workflow Activity Schemas](../modules/workflow-activity-schemas.md).

### SignalR

SignalR support now includes API-token authentication for hubs that opt in. This helps single page applications, mobile apps, and service-to-service clients connect to supported CrestApps hubs using OpenID access tokens.

See [SignalR](../modules/signalr.md#authenticating-with-access-tokens).

### Telephony and DialPad

The new **Telephony** modules provide a provider-agnostic soft phone for Orchard Core.

Users can place and manage calls from a floating soft phone widget. The soft phone supports common call controls, recent calls, active-call status, and click-to-dial from phone fields when available.

The **DialPad** provider integrates DialPad as the first telephony provider. It supports API key authentication, OAuth 2.0, production and sandbox environments, and per-user connection flows for multiuser scenarios.

See [Telephony](../telephony/index.md) and [DialPad](../telephony/dialpad.md).

### Time Zones

The **Time Zones** module lets administrators manage friendly named time-zone maps. Other modules, including Omnichannel, can use these maps instead of exposing raw IANA time-zone lists to operators.

See [Time Zones](../modules/time-zones.md).

## Upgrade checklist

1. Back up every tenant database.
2. Install the .NET 10 SDK.
3. Update application projects to `net10.0`.
4. Update package references and package feeds for CrestApps.OrchardCore `2.0.0`.
5. Start the application and let tenant migrations complete.
6. Review AI provider connections, deployments, defaults, profiles, templates, tools, and knowledge sources.
7. Enable and configure new modules only where they are needed.
8. Validate the tenant workflows that matter to your site, such as AI chat, imports, exports, reports, omnichannel activity management, phone verification, telephony, recipes, and deployment plans.

## Recommended reading

- [Artificial Intelligence Suite](../ai/index.md)
- [AI Chat](../ai/chat.md)
- [AI Chat Interactions](../ai/chat-interactions.md)
- [AI Data Sources](../ai/data-sources/index.md)
- [AI Documents](../ai/documents/index.md)
- [AI Memory](../ai/memory.md)
- [Model Context Protocol](../ai/mcp/index.md)
- [A2A](../ai/a2a/index.md)
- [Content Transfer](../modules/content-transfer.md)
- [DNC Registry](../modules/dnc-registry.md)
- [Omnichannel Communications](../omnichannel/index.md)
- [Phone Number Verifications](../modules/phone-number-verifications.md)
- [Recipes](../modules/recipes.md)
- [Reports](../modules/reports.md)
- [Telephony](../telephony/index.md)
- [Time Zones](../modules/time-zones.md)
